先做功能，todo：性能

--- a/src/dialog.css
+++ b/src/dialog.css
@@ -12,6 +12,8 @@
     margin: auto;
     left: 0;
     right: 0;
+    /*top: 0;*/
+    /*bottom: 0;*/
 }
 
 .dialog,
@@ -29,7 +31,9 @@
 }
 
 .dialog-body {
-    padding: .5em;;
+    padding: .5em;
+    word-break: break-all;
+    overflow-y: auto;
 }
 
 .dialog-footer {
