--- a/src/dialog.css
+++ b/src/dialog.css
@@ -1,59 +1,3 @@
 .dialog {
-    font: 14px/1.5em tahoma, 'Microsoft yahei', "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    color: #555;
-    background-color: #fff;
-    border-radius: 5px;
-    border: 1px solid #ddd;
-    overflow: hidden;
-    width: 90%;;
-
-    /* 居中；上线居中就设置top：0，bottom：0 */
-    position: fixed;
-    margin: auto;
-    left: 0;
-    right: 0;
-    /*top: 0;*/
-    /*bottom: 0;*/
-}
-
-.dialog,
-.dialog *,
-.dialog *:before,
-.dialog *:after {
-    -webkit-box-sizing: border-box;
-}
-
-.dialog-header {
-    text-indent: 1em;
-    height: 3em;
-    line-height: 3em;
-    background-color: #f7f7f7;
-}
-
-.dialog-body {
-    padding: .5em;
-    word-break: break-all;
-    overflow-y: auto;
-}
-
-.dialog-footer {
-    display: -webkit-box;
-}
-
-.dialog-btn {
-    -webkit-box-flex: 1;
-    display: block;
-    text-decoration: none;
-    text-align: center;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    color: inherit;
-    padding: .8em 0;
-    margin: .8em;
-}
-
-.dialog-btn-primary {
-    border-color: #e94543;
-    color: #fff;
-    background-color: #e94543;;
+  color: #ff0000;
 }
