--- a/src/dialog.less
+++ b/src/dialog.less
@@ -6,7 +6,7 @@
   border: 1px solid #ddd;
   overflow: hidden;
   width: 90%;;
-  position: fixed;
+  position: absolute;
   margin: auto;
   left: 0;
   right: 0;
