--- a/src/dialog.less
+++ b/src/dialog.less
@@ -10,11 +10,14 @@
   margin: auto;
   left: 0;
   right: 0;
-
+  opacity: 1;
+  transition: transform .15s ease-in-out;
+  transform: scale(.85);
   box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
 
   *, *:before, *:after {
     -webkit-box-sizing: border-box;
+    box-sizing: border-box;
   }
 
   // components
@@ -35,10 +38,19 @@
       border-color: #ebccd1;
     }
 
-//    .dialog-btn-primary {
-//      color: #a94442;
-//      background-color: #f2dede;
-//    }
+    //    .dialog-btn-primary {
+    //      color: #a94442;
+    //      background-color: #f2dede;
+    //    }
+  }
+  &.dialog-fade-out {
+    opacity: 0;
+  }
+  &.dialog-zoom-in {
+    transform: scale(1);
+  }
+  &.dialog-zoom-out {
+    transform: scale(0);
   }
 }
 
@@ -59,7 +71,7 @@
 
 // footer
 .dialog-footer {
-  display: -webkit-box;
+  display: box;
 }
 
 // buttons;
