--- a/src/dialog.less
+++ b/src/dialog.less
@@ -11,7 +11,7 @@
   left: 0;
   right: 0;
   opacity: 1;
-  transition: transform .15s ease-in-out;
+  transition: all .15s ease-in-out;
   transform: scale(.85);
   box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
 
@@ -71,6 +71,7 @@
 
 // footer
 .dialog-footer {
+  display: -webkit-box;
   display: box;
 }
 
