--- a/src/jDialog.less
+++ b/src/jDialog.less
@@ -27,6 +27,9 @@
     background-color: rgba(0, 0, 0, .4);
     border: none;
     color: #fff;
+    .dialog-body{
+      padding: 1em;
+    }
   }
   &.dialog-error {
 
