--- a/src/jDialog.less
+++ b/src/jDialog.less
@@ -7,9 +7,6 @@
   overflow: hidden;
   width: 90%;
   position: absolute;
-  //margin: auto;
-  //left: 0;
-  //right: 0;
   left: 50%;
   margin-left: -45%;
   opacity: 1;
@@ -51,6 +48,7 @@
 
 // header
 .dialog-header {
+  position: relative;
   text-indent: 1em;
   height: 3em;
   line-height: 3em;
@@ -95,3 +93,8 @@
   background-color: #e94543;
 }
 
+// close btn
+.dialog-btn-dismiss {
+  position: absolute;
+  right: 1em;
+}
